@@ -3,61 +3,64 @@ package com.flyerzrule.mc.customtags.api;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import com.flyerzrule.mc.customtags.database.OwnedTagsDao;
+import com.flyerzrule.mc.customtags.database.SelectedTagsDao;
 import org.bukkit.entity.Player;
 
 import com.flyerzrule.mc.customtags.config.TagsConfig;
-import com.flyerzrule.mc.customtags.database.TagsDatabase;
 import com.flyerzrule.mc.customtags.models.Tag;
 import com.flyerzrule.mc.customtags.utils.PrefixUtils;
 
 public class API {
     public static boolean giveUserTag(Player player, String tagId) {
-        TagsDatabase db = TagsDatabase.getInstance();
+        OwnedTagsDao db = OwnedTagsDao.getInstance();
         return db.giveUserTag(getUUID(player), tagId);
     }
 
     public static boolean removeUserTag(Player player, String tagId) {
-        TagsDatabase db = TagsDatabase.getInstance();
-        Tag currentSelected = db.getSelectedForUser(getUUID(player));
+        SelectedTagsDao selectedTagsDao = SelectedTagsDao.getInstance();
+        OwnedTagsDao ownedTagsDao = OwnedTagsDao.getInstance();
+        Tag currentSelected = selectedTagsDao.getSelectedForUser(getUUID(player));
         if (currentSelected != null) {
             if (currentSelected.getId().equals(tagId)) {
-                db.unselectTagForUser(getUUID(player));
+                selectedTagsDao.unselectTagForUser(getUUID(player));
             }
         }
-        return db.removeUserTag(getUUID(player), tagId);
+        return ownedTagsDao.removeUserTag(getUUID(player), tagId);
     }
 
     public static boolean removeAllUserTags(Player player) {
-        TagsDatabase db = TagsDatabase.getInstance();
-        Tag currentSelected = db.getSelectedForUser(getUUID(player));
+        OwnedTagsDao ownedTagsDao = OwnedTagsDao.getInstance();
+        SelectedTagsDao selectedTagsDao = SelectedTagsDao.getInstance();
+        Tag currentSelected = selectedTagsDao.getSelectedForUser(getUUID(player));
         if (currentSelected != null) {
-            db.unselectTagForUser(getUUID(player));
+            selectedTagsDao.unselectTagForUser(getUUID(player));
         }
-        return db.removeAllTagsForUser(getUUID(player));
+        return ownedTagsDao.removeAllTagsForUser(getUUID(player));
     }
 
     public static List<String> getUserTagIds(Player player) {
-        TagsDatabase db = TagsDatabase.getInstance();
-        return db.getUserOwnedTags(getUUID(player)).stream().map(ele -> ele.getId()).collect(Collectors.toList());
+        OwnedTagsDao ownedTagsDao = OwnedTagsDao.getInstance();
+        return ownedTagsDao.getUserOwnedTags(getUUID(player)).stream().map(Tag::getId).toList();
     }
 
     public static boolean setUserSelectedTag(Player player, String tagId) {
-        TagsDatabase db = TagsDatabase.getInstance();
+        SelectedTagsDao selectedTagsDao = SelectedTagsDao.getInstance();
         TagsConfig tagsConfig = TagsConfig.getInstance();
         Tag tag = tagsConfig.getTagById(tagId);
         PrefixUtils.selectPrefix(player, tag.getTag());
-        return db.selectTagForUser(getUUID(player), tagId);
+        return selectedTagsDao.selectTagForUser(getUUID(player), tagId);
     }
 
     public static boolean removeUserSelectedTag(Player player) {
-        TagsDatabase db = TagsDatabase.getInstance();
+        SelectedTagsDao selectedTagsDao = SelectedTagsDao.getInstance();
         PrefixUtils.removePrefix(player);
-        return db.unselectTagForUser(getUUID(player));
+        return selectedTagsDao.unselectTagForUser(getUUID(player));
     }
 
     public static String getUserSelectedTagId(Player player) {
-        TagsDatabase db = TagsDatabase.getInstance();
-        Tag tag = db.getSelectedForUser(getUUID(player));
+        SelectedTagsDao selectedTagsDao = SelectedTagsDao.getInstance();
+        Tag tag = selectedTagsDao.getSelectedForUser(getUUID(player));
 
         if (tag != null) {
             return tag.getId();
